# interslavic-wiktionary-lab

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_PROMPT_V5.md  IMPROVEMENT_PROMPT_V7.md  INTEGRATION.md  LICENSE  Makefile  README.md  context.md
.github/workflows/: ci.yml  data-release.yml  pages.yml
data/: FLAVORIZATION_SPEC.md  MANIFEST.json  RULE_SPEC.md  VOTING_MACHINE_NOTES.md  corpus-calibration.json  corpus-coverage-calibration.json  entry-id-registry.json  game-text-fixture.txt  isv-thesaurus.json  novel-words.tsv  project-lexicon-fixture.tsv  proto-slavic.cache.json  refresh-changelog.md  score-calibration.json  semantic-notes.json
docs/: DATA-REFRESH.md  PIPELINE.md
docs/history/: IMPROVEMENT_PROMPT.md  IMPROVEMENT_PROMPT_V10.md  IMPROVEMENT_PROMPT_V11.md  IMPROVEMENT_PROMPT_V13.md  IMPROVEMENT_PROMPT_V14.2.md  IMPROVEMENT_PROMPT_V15.1.md  IMPROVEMENT_PROMPT_V15.md  IMPROVEMENT_PROMPT_V2.md  IMPROVEMENT_PROMPT_V3.md  IMPROVEMENT_PROMPT_V4.md  IMPROVEMENT_PROMPT_V6.md  IMPROVEMENT_PROMPT_V9.md  IMPROVEMENT_REPORT_V7.md  IMPROVEMENT_REPORT_V8.md  README.md  V15-AUDIT.json
reports/: audit-misses.csv  checktext-report.md  cluster-selection.md  corpus-summary.json  errors-sample.csv  evidence-growth.md  oracle-ladder.md  proto-engine-report.md  regressions.csv  rep-selection.md  synonym-accuracy.md  synonym-summary.json  translation-probe.md
src/: aspect.rs  calibrate.rs  check.rs  coincheck.rs  consensus.rs  corpus.rs  corpus_calibrate.rs  corpus_reference.rs  derive.rs  derive_eval.rs  dump.rs  enrich.rs  eval.rs  falsefriends.rs  fingerprint.rs  flavorize.rs  forms.rs  generator.rs  gloss.rs  glossxref.rs  inflect_eval.rs  lang.rs  lib.rs  main.rs  model.rs  morph.rs  normalize.rs  novel.rs  official.rs  orthography.rs  pipeline.rs  postag.rs  proto.rs  proto_link.rs  release.rs  site.rs  thesaurus.rs
src/site/: assets.rs  coverage.rs  english_api.rs  entries.rs  layout.rs  mod.rs  model.rs  navigation.rs  search.rs  special.rs  tests.rs
tools/: search-perf.mjs  translation-probe.txt  validate-aspect-export.py  validate-author-tools.mjs  validate-linguistic-logic.py
