[package]
name = "interslavic-wiktionary-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Git dependency (rev-pinned) so the build is self-contained — CI and GitHub
# Pages can build without the sibling checkout. For local work against a
# sibling clone, override with a [patch] or swap to a path dependency.
interslavic = "=0.6.0"
