[package]
name = "interslavic-wiktionary-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Exact crates.io pin keeps generated paradigms reproducible in CI and Pages.
# For local work against a sibling clone, override it with a [patch].
interslavic = "=0.9.0"
